--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400..600&display=swap"
+      rel="stylesheet"
+    />
     <title>Homework 7</title>
     <link rel="stylesheet" href="./css/common.css" />
-
-    <script type="module" src="./js/task-1.js" defer></script>
-    <script type="module" src="./js/task-2.js" defer></script>
-    <script type="module" src="./js/task-3.js" defer></script>
-    <script type="module" src="./js/task-4.js" defer></script>
-    <script type="module" src="./js/task-5.js" defer></script>
   </head>
   <body>
     <ul>
