--- a/task-3.html
+++ b/task-3.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,10 +19,12 @@
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
+
     <div class="your-name">
       <input type="text" id="name-input" placeholder="Please enter your name" />
       <h1 class="title">Hello, <span id="name-output">Anonymous</span>!</h1>
     </div>
+
     <script src="./js/task-3.js" type="module"></script>
   </body>
 </html>
