--- a/task-5.html
+++ b/task-5.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,7 +17,7 @@
     <title>Task 5</title>
     <link rel="stylesheet" href="./css/common.css" />
   </head>
-  <body">
+  <body>
     <p><a href="./index.html">Go back</a></p>
 
     <div class="widget">
